# tsuno

./: .gitignore  AGENTS.md  Cargo.toml  rust-toolchain.toml
crates/cargo-tsuno/: Cargo.toml
crates/cargo-tsuno/src/: cargo_api.rs  main.rs
crates/cargo-tsuno/tests/: verify_cli.rs
crates/cargo-tsuno/tests/fixtures/verify_cli/: rejects_loops_without_invariants.rs
crates/cargo-tsuno/tests/fixtures/verify_cli/fail/: abstracts_mutable_reference_calls.rs  abstracts_mutable_reference_calls.snap  rejects_inv_inside_nested_block.rs  rejects_inv_inside_nested_block.snap  rejects_inv_not_at_loop_start.rs  rejects_inv_not_at_loop_start.snap  rejects_loop_invariant_on_entry.rs  rejects_loop_invariant_on_entry.snap  rejects_loops_without_invariants.rs  rejects_loops_without_invariants.snap  solver_returns_unknown.rs  (+16 more)
crates/cargo-tsuno/tests/snapshots/: verify_cli__abstracts_mutable_reference_calls.snap  verify_cli__rejects_loops_without_invariants.snap  verify_cli__rejects_open_mutable_reference_after_abstract_call.snap  verify_cli__reports_failing_assertion.snap  verify_cli__verifies_checked_integer_arithmetic.snap
crates/tsuno-driver/: Cargo.toml  build.rs
crates/tsuno-driver/lib/: prelude.rs
crates/tsuno-driver/src/: contracts.rs  diagnostic.rs  directive.rs  engine.rs  lib.rs  main.rs  prepass.rs  report.rs  spec.rs  spec_syntax.rs  symbolic.rs  value.rs  value_encoding.rs  wrapper.rs
crates/tsuno-driver/tests/: prepass_regression_tests.rs  runtime_fixture_tests.rs  snapshot_tests.rs  verify_cli.rs
crates/tsuno-driver/tests/fixtures/prepass/: allows_complex_lemma_assumption.rs  rejects_duplicate_prelude_definition.rs  rejects_invalid_ghosts_without_toplevel_functions.rs  rejects_unknown_existential_lemma_assertion.rs  reports_multiple_function_prepass_errors.rs
crates/tsuno-driver/tests/fixtures/verify_cli/: abstracts_mutable_reference_calls.rs  allows_reestablishing_mutable_reference_after_abstract_call.rs  rejects_open_mutable_reference_after_abstract_call.rs  rejects_open_mutable_reference_on_storage_dead.rs  reports_failing_assertion.rs  verifies_a_trivial_assertion_fixture.rs  verifies_checked_integer_arithmetic.rs  verifies_loop_invariant_on_simple_loop.rs
crates/tsuno-driver/tests/snapshots/: verify_cli__abstracts_mutable_reference_calls.snap  verify_cli__allows_reestablishing_mutable_reference_after_abstract_call.snap  verify_cli__rejects_loops_without_invariants.snap  verify_cli__rejects_open_mutable_reference_after_abstract_call.snap  verify_cli__rejects_open_mutable_reference_on_storage_dead.snap  verify_cli__reports_failing_assertion.snap  verify_cli__verifies_a_trivial_assertion_fixture.snap  verify_cli__verifies_loop_invariant_on_simple_loop.snap
(+481 files in other folders)
