[workspace]
members = [
    "crates/cargo-tsuno",
    "crates/tsuno-driver",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
insta = "1.31"
tempfile = "3.12"
z3 = { version = "0.19.15", features = ["gh-release"] }
