[package]
name = "tsuno-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "tsuno-driver"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
z3.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
